# mlcg

./: .env.example  .gitignore  Dockerfile  README.md  WARP.md  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  docker-build.yml  tests.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  endpoints.py
app/models/: __init__.py  certificate.py
app/services/: __init__.py  generator.py  storage.py  verification.py
app/templates/: verify.html
scripts/: test_presigned_urls.py
tests/: __init__.py  conftest.py  test_endpoints.py  test_verification.py
